# motion.productions

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.video-ai  Procfile  README.md  docker-compose.local.yml  fly.loop-balanced.toml  fly.loop-exploiter.toml  fly.loop-explorer.toml  fly.loop-interpret.toml  fly.loop-sound.toml  fly.loop-webjobs.toml  fly.procedural-render.toml  fly.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt
cloudflare/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc  wrangler.toml
config/: default.yaml  workflows.yaml
docs/: ALGORITHMS_AND_FUNCTIONS_AUDIT.md  ARCHITECTURE.md  AUDIO_AND_WORKFLOWS.md  AUTOMATION.md  BACKLOG_AND_ENHANCEMENTS.md  BRAND.md  CODEBASE_AUDIT_MISSION_ALIGNMENT.md  CODEBASE_STRUCTURE.md  COMPLETE_MP4_ASPECTS.md  CREATION_RANDOMIZER.md  D1_SCHEMA.md  DEPLOYMENT.md  DEPLOY_CLOUDFLARE.md  DEPLOY_INTERPRET_WORKER.md  DYNAMIC_ELEMENTS_REGISTRY.md  ENHANCEMENTS_AND_OPTIMIZATIONS.md  FOUNDATION.md  INTENDED_LOOP.md  INTENDED_LOOP_ALGORITHMS.md  LOCAL_COMPUTE.md  LOOP_STANDARDS.md  MANUS_AI_ENHANCEMENT_REPORT_REVIEW.md  MISSION_AND_OPERATIONS.md  MISSION_AND_STRATEGIC_OPTIMIZATIONS.md  MOVIELABS_TAXONOMY_AUDIT.md  MP4_ASPECTS.md  MP4_ASPECT_COVERAGE.md  MULTI_WORKFLOW_RAILWAY.md  NAME_GENERATOR.md  NARRATIVE_REGISTRY.md  OPERATIONAL_CHECKLIST.md  PRECISION_AND_ACCURACY_FAQ.md  PRECISION_VERIFICATION_CHECKLIST.md  PROD_VIDEO_AND_AUDIO.md  PURE_VS_NONPURE_REGISTRIES.md  RAILWAY_CONFIG.md  REGISTRIES.md  REGISTRY_AND_LOOP_AUDIT.md  (+17 more)
scripts/: automate.py  (+29 more)
(+193 files in other folders)
